improvements to predicates ui

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -429,3 +429,14 @@ code
     position : relative;
     z-index : 101;
 }
+
+.predblock
+{
+    display: block;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #ccc #888 #555 #bbb;
+    margin: 0;
+    padding: 2px 3px;
+}
+
